--- a/SpatzResume.tex
+++ b/SpatzResume.tex
@@ -15,7 +15,7 @@
 \name{Mark H. Spatz\\[8pt]}     % the \\[12pt] adds a blank
 				        % line after name      
 
-\address{mspatz@mit.edu\\  }
+\address{mspatz@mit.edu\\mark.h.spatz@gmail.com  }
 \address{(816)-679-1502}
 
 %\renewcommand{\headrulewidth}{0pt} %delete hrule under name
@@ -29,6 +29,7 @@
 {\bf December 2016:} M.S. in Electrical Science and Engineering, Massachusetts Institute of Technology
 \section{Coursework}
 	\vspace{0.05in}
+	{\bf Spring 2016} 6.776: High Speed Communication Circuits, 8.044: Statistical Physics I\vspace{0.05in}\\
 	{\bf Fall 2015} 6.556: Data Acquisition and Image Reconstruction in MRI, 18.06: Linear Algebra\vspace{0.05in}\\
     {\bf Spring 2014} 6.101: Analog Circuits Lab, 6.006: Introduction to Algorithms \vspace{0.05in}\\
     {\bf Fall 2013} 6.301: Solid State Circuits, 6.332: Advanced Topics in Power Electronics, Chinese I \vspace{0.05in}\\
