fall 2016 career fair update

--- a/SpatzResume.tex
+++ b/SpatzResume.tex
@@ -3,12 +3,12 @@
 
 \documentclass{res}
 \usepackage{fancyhdr}
-\pagestyle{fancy} 
+
+\pagestyle{fancy}
 
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font 
 %\setlength{\textheight}{9.5in} % sincrease text height to fit on 1-page 
-
 
 \begin{document} 
 
@@ -26,23 +26,28 @@
 \vspace{0.05in} 
 
 {\bf May 2014:} B.S. in Electrical Science and Engineering, Massachusetts Institute of Technology\\
-{\bf December 2016:} M.S. in Electrical Science and Engineering, Massachusetts Institute of Technology
+{\bf December 2016 (Anticipated):} M.S. in Electrical Science and Engineering, Massachusetts Institute of Technology
 \section{Coursework}
-	\vspace{0.05in}
-	{\bf Spring 2016} 6.776: High Speed Communication Circuits, 8.044: Statistical Physics I\vspace{0.05in}\\
-	{\bf Fall 2015} 6.556: Data Acquisition and Image Reconstruction in MRI, 18.06: Linear Algebra\vspace{0.05in}\\
-    {\bf Spring 2014} 6.101: Analog Circuits Lab, 6.006: Introduction to Algorithms \vspace{0.05in}\\
-    {\bf Fall 2013} 6.301: Solid State Circuits, 6.332: Advanced Topics in Power Electronics, Chinese I \vspace{0.05in}\\
-    {\bf Spring 2013} 6.302: Feedback Systems, 6.334: Power Electronics, 6.011: Intro to Communication, Control, and Signal Processing \vspace{0.05in}\\
-    {\bf Fall 2012} 6.013: Electromagnetics and Applications, 6.003: Signals and Systems, 6.041 Probabilistic Systems Analisys \vspace{0.05in}\\
-    {\bf Spring 2012} 6.012: Microelectronic Devices \& Circuits, 6.004: Computation Structures \vspace{0.05in}\\
-    {\bf Fall 2011}  6.02: Intro to EECS II, 6.002: Circuits \& Electronics, 6.131: Power Electronics Lab\vspace{0.05in}\\    
-    {\bf Spring 2011} 6.01: Intro to EECS I, 18.03: Differential Equations
+	\vspace{-0.05in}
+	\begin{tabbing}
+	6.012: Microelectronic Devices \& Circuits, \=6.013: Electromagnetics and Applications \kill
+	6.334: Power Electronics, \>6.332: Advanced Topics in Power Electronics,\\
+	6.302: Feedback Systems,  \>6.301: Solid State Circuits,\\
+	6.003: Signals and Systems, \>6.041 Probabilistic Systems Analisys, 6.011,\\
+	18.06: Linear Algebra, \>18.0851: Computational Science \& Engineering I,\\
+	6.012: Microelectronic Devices \& Circuits, \>6.013: Electromagnetics and Applications,\\
+	6.002: Circuits \& Electronics, \>6.131: Power Electronics Lab,\\
+	6.556: Data Acquisition and Image Reconstruction in MRI,\\
+	6.776: High Speed Communications Circuits,\\
+	6.01, 6.02, 6.004, 6.006, 6.101, 18.03, Chinese I
+	\end{tabbing}
+
 \section{Experience}
 	\vspace{0.05in}
-	{\bf Research Assistant, Magnetic Resonance Imaging Group. September 2015 - Present:} Building a 128 channel MRI receive coil for fetal imaging. \vspace{0.05in}\\
+	
+	{\bf Research Assistant, Martinos Center for Biomedical Imaging. September 2015 - Present:} Designing, building, and testing massively parallel 3T MRI receive arrays for fetal imaging at 22 and 36 weeks of pregnancy. \vspace{0.05in}\\
 	{\bf Electrical Engineer, SQZ Biotech. June-August 2015:} Developed a pressure control system to drive material through microfluidic chips. \vspace{0.05in}\\
-	{\bf Electrical Engineer, Ashton Instruments. February-May 2015:} Created a development board for an upcoming bicycle power meter.  Created/maintained various pieces of firmware and data analysis software. \vspace{0.05in}\\
+	{\bf Electrical Engineer, Ashton Instruments. February-May 2015:} Created a devvoard for a bicycle power meter.  Created/maintained various pieces of firmware and data analysis software. \vspace{0.05in}\\
 	{\bf iPad Systems EE Intern, Apple Inc. June-December 2014:} Worked on the systems integration team facilitating pre-production iPad builds, troubleshooting production and desense issues, and completing characterization tasks.\vspace{0.05in}\\
 	{\bf Research Intern, Fitbit Inc. Summer 2013:} Developed a new pedometer algorithm for internal verification purposes and did investigative work on the electronics for a new product.\vspace{0.05in}\\
 	{\bf Production Intern, Fitbit Inc. Summer 2012:} Helped with preliminary FCC testing for the fitbit One, and spent a total of four weeks in mainland China helping bring up production lines for the fitbit Zip.\\
@@ -51,8 +56,9 @@
 
   \item Circuit design and debugging
   \item PCB design, mostly using KiCad
+  \item RF hardware
   \item Switching converters and other power electronics
-  \item ARM and AVR development
+  \item ARM development
   \item Proficient in C, Python, and Matlab.
 \end{itemize}
 
