change MS to MEng.

--- a/SpatzResume.tex
+++ b/SpatzResume.tex
@@ -26,7 +26,7 @@
 \vspace{0.05in} 
 
 {\bf May 2014:} B.S. in Electrical Science and Engineering, Massachusetts Institute of Technology\\
-{\bf December 2016 (Anticipated):} M.S. in Electrical Science and Engineering, Massachusetts Institute of Technology
+{\bf December 2016 (Anticipated):} MEng in Electrical Science and Engineering, Massachusetts Institute of Technology
 \section{Coursework}
 	\vspace{-0.05in}
 	\begin{tabbing}
