correct typo devvoard->devboard

--- a/SpatzResume.tex
+++ b/SpatzResume.tex
@@ -47,7 +47,7 @@
 	
 	{\bf Research Assistant, Martinos Center for Biomedical Imaging. September 2015 - Present:} Designing, building, and testing massively parallel 3T MRI receive arrays for fetal imaging at 22 and 36 weeks of pregnancy. \vspace{0.05in}\\
 	{\bf Electrical Engineer, SQZ Biotech. June-August 2015:} Developed a pressure control system to drive material through microfluidic chips. \vspace{0.05in}\\
-	{\bf Electrical Engineer, Ashton Instruments. February-May 2015:} Created a devvoard for a bicycle power meter.  Created/maintained various pieces of firmware and data analysis software. \vspace{0.05in}\\
+	{\bf Electrical Engineer, Ashton Instruments. February-May 2015:} Created a devboard for a bicycle power meter.  Created/maintained various pieces of firmware and data analysis software. \vspace{0.05in}\\
 	{\bf iPad Systems EE Intern, Apple Inc. June-December 2014:} Worked on the systems integration team facilitating pre-production iPad builds, troubleshooting production and desense issues, and completing characterization tasks.\vspace{0.05in}\\
 	{\bf Research Intern, Fitbit Inc. Summer 2013:} Developed a new pedometer algorithm for internal verification purposes and did investigative work on the electronics for a new product.\vspace{0.05in}\\
 	{\bf Production Intern, Fitbit Inc. Summer 2012:} Helped with preliminary FCC testing for the fitbit One, and spent a total of four weeks in mainland China helping bring up production lines for the fitbit Zip.\\
