wording changes, graduate in February

--- a/SpatzResume.tex
+++ b/SpatzResume.tex
@@ -26,7 +26,7 @@
 \vspace{0.05in} 
 
 {\bf May 2014:} B.S. in Electrical Science and Engineering, Massachusetts Institute of Technology\\
-{\bf December 2016 (Anticipated):} MEng in Electrical Science and Engineering, Massachusetts Institute of Technology
+{\bf February 2016 (Anticipated):} MEng in Electrical Science and Engineering, Massachusetts Institute of Technology
 \section{Coursework}
 	\vspace{-0.05in}
 	\begin{tabbing}
@@ -45,8 +45,8 @@
 \section{Experience}
 	\vspace{0.05in}
 	
-	{\bf Research Assistant, Martinos Center for Biomedical Imaging. September 2015 - Present:} Designing, building, and testing massively parallel 3T MRI receive arrays for fetal imaging at 22 and 36 weeks of pregnancy. \vspace{0.05in}\\
-	{\bf Electrical Engineer, SQZ Biotech. June-August 2015:} Developed a pressure control system to drive material through microfluidic chips. \vspace{0.05in}\\
+	{\bf Research Assistant, Martinos Center for Biomedical Imaging. September 2015 - Present:} Designing, building, and testing parallel MRI receive arrays for fetal imaging at 22 and 36 weeks of pregnancy. \vspace{0.05in}\\
+	{\bf Electrical Engineer, SQZ Biotech. June-August 2015:} Developed an electronic pressure control system to drive material through microfluidic chips. \vspace{0.05in}\\
 	{\bf Electrical Engineer, Ashton Instruments. February-May 2015:} Created a devboard for a bicycle power meter.  Created/maintained various pieces of firmware and data analysis software. \vspace{0.05in}\\
 	{\bf iPad Systems EE Intern, Apple Inc. June-December 2014:} Worked on the systems integration team facilitating pre-production iPad builds, troubleshooting production and desense issues, and completing characterization tasks.\vspace{0.05in}\\
 	{\bf Research Intern, Fitbit Inc. Summer 2013:} Developed a new pedometer algorithm for internal verification purposes and did investigative work on the electronics for a new product.\vspace{0.05in}\\
