--- a/SpatzResume.tex
+++ b/SpatzResume.tex
@@ -8,7 +8,8 @@
 
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font 
-%\setlength{\textheight}{9.5in} % sincrease text height to fit on 1-page 
+\setlength{\textheight}{9.5in} % sincrease text height to fit on 1-page 
+\setlength{\textwidth}{6.1in}
 
 \begin{document} 
 
@@ -26,7 +27,7 @@
 \vspace{0.05in} 
 
 {\bf May 2014:} B.S. in Electrical Science and Engineering, Massachusetts Institute of Technology\\
-{\bf February 2016 (Anticipated):} MEng in Electrical Science and Engineering, Massachusetts Institute of Technology
+{\bf February 2017:} MEng in Electrical Science and Engineering, Massachusetts Institute of Technology
 \section{Coursework}
 	\vspace{-0.05in}
 	\begin{tabbing}
@@ -44,13 +45,14 @@
 
 \section{Experience}
 	\vspace{0.05in}
-	
-	{\bf Research Assistant, Martinos Center for Biomedical Imaging. September 2015 - Present:} Designing, building, and testing parallel MRI receive arrays for fetal imaging at 22 and 36 weeks of pregnancy. \vspace{0.05in}\\
-	{\bf Electrical Engineer, SQZ Biotech. June-August 2015:} Developed an electronic pressure control system to drive material through microfluidic chips. \vspace{0.05in}\\
-	{\bf Electrical Engineer, Ashton Instruments. February-May 2015:} Created a devboard for a bicycle power meter.  Created/maintained various pieces of firmware and data analysis software. \vspace{0.05in}\\
-	{\bf iPad Systems EE Intern, Apple Inc. June-December 2014:} Worked on the systems integration team facilitating pre-production iPad builds, troubleshooting production and desense issues, and completing characterization tasks.\vspace{0.05in}\\
-	{\bf Research Intern, Fitbit Inc. Summer 2013:} Developed a new pedometer algorithm for internal verification purposes and did investigative work on the electronics for a new product.\vspace{0.05in}\\
-	{\bf Production Intern, Fitbit Inc. Summer 2012:} Helped with preliminary FCC testing for the fitbit One, and spent a total of four weeks in mainland China helping bring up production lines for the fitbit Zip.\\
+	{\bf LeafLabs LLC. --- Member of Technical Staff (April 2018 - October 2020), Senior Member of Technical Staff (October 2020 - Present):} \vspace{0.05in} FPGA development, C++ development for high performance data acquisition and real time signal processing.\\
+	{\bf Cascodium Inc. --- Development Engineer (March 2017 - April 2018):} VHDL development including a paremeterized fixed point radix-4 FFT for a radio application. C development on Linux and FreeRTOS.   \vspace{0.05in}\\
+	{\bf Martinos Center for Biomedical Imaging. --- Research Assistant (September 2015 - February 2017):} Designed, built, and tested parallel MRI receive arrays for fetal imaging at 22 and 36 weeks of pregnancy. \vspace{0.05in}\\
+	{\bf SQZ Biotech. (June-August 2015):} Developed an electronic pressure control system to drive material through microfluidic chips. \vspace{0.05in}\\
+	{\bf Ashton Instruments. (February-May 2015):} Created a devboard for a bicycle power meter.  Created/maintained various pieces of firmware and data analysis software. \vspace{0.05in}\\
+	{\bf Apple Inc. --- iPad Systems EE Intern (June-December 2014):} Worked on the systems integration team facilitating pre-production iPad builds, troubleshooting production and desense issues, and completing characterization tasks.\vspace{0.05in}\\
+	{\bf Fitbit Inc. --- Research Intern (Summer 2013):} Developed a new pedometer algorithm for internal verification purposes and did investigative work on the electronics for a new product.\vspace{0.05in}\\
+	{\bf Fitbit Inc. --- Production Intern (Summer 2012):} Helped with preliminary FCC testing for the fitbit One, and spent a total of four weeks in mainland China helping bring up production lines for the fitbit Zip.\\
 \section{Interests and Skills}
 \begin{itemize}
 
@@ -59,7 +61,7 @@
   \item RF hardware
   \item Switching converters and other power electronics
   \item ARM development
-  \item Proficient in C, Python, and Matlab.
+  \item Proficient in C, C++20, Python
 \end{itemize}
 
 \end{resume}
